# super-log-parser

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
super_log_parser/: __init__.py  core.py
tests/: test_super_log_parser.py
